# slime_mold

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  LICENSE.txt  README.md  conan_install.bat  conanfile.txt
apps/native/: CMakeLists.txt  main.cpp
apps/sdl/: CMakeLists.txt  main.cpp
apps/web/: CMakeLists.txt  main.cpp  shell-minimal.html
libs/common/: CMakeLists.txt
libs/common/include/common/: presets.h  slime_mold.h  slime_mold_simulation.h  slime_mold_viewmodel.h
libs/common/source/: colors.cpp  presets.cpp  slime_mold.cpp  slime_mold_simulation.cpp  slime_mold_viewmodel.cpp
libs/ui_imgui/: CMakeLists.txt
libs/ui_imgui/include/ui_imgui/: ui.h
libs/ui_imgui/src/: ui.cpp
source/apps/sdl/: CMakeLists.txt  main.cpp  shell-minimal.html
source/apps/test_palettes/: CMakeLists.txt  main.cpp
source/libs/common/: CMakeLists.txt
source/libs/common/include/common/: colors.h  presets.h  slime_mold_simulation.h  slime_mold_viewmodel.h
source/libs/common/source/: colors.cpp  presets.cpp  slime_mold_simulation.cpp  slime_mold_viewmodel.cpp
source/libs/ui_imgui/: CMakeLists.txt
source/libs/ui_imgui/include/ui_imgui/: ui.h
source/libs/ui_imgui/src/: ui.cpp
src/: colors.cpp  colors.h  presets.cpp  presets.h  slimemold.cpp
src/common/: simulation.cpp  simulation.h
src/native_app/: slimemold.cpp
